# pwdg

./: Cargo.toml  README.md
.github/workflows/: ci.yml  static_analysis.yml
src/: charset.rs  error.rs  generator.rs  lib.rs  main.rs  util.rs
src/util/: filter.rs  uint.rs
tests/: cli_test.rs
